fix skill-name width
should no longer push the skill/will bar to the right when skill name is too long

--- a/src/frontend/src/components/profile/basic-profile.less
+++ b/src/frontend/src/components/profile/basic-profile.less
@@ -111,9 +111,6 @@
     font-weight: @s-title-font-weight;
     padding: @s-stack 0 @l-stack;
   }
-  .skill-name {
-    white-space: nowrap;
-  }
   .show-more-link {
     color: @s2-red;
     margin: @xl-stack auto;
